# mouse-overlay

./: Cargo.toml  README.md  indicators.afdesign
.cargo/: config.toml
src/: main.rs
