[package]
name = "mouse-highlighter"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
mki = "0.2.3"

[features]
default = []
dev = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
